# agent-o11y-sdk

./: .gitignore  PLAN.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: ablation-compare.md  inspect-artifact.md  query-logs.md  query-metrics.md
examples/: fake_tool_agent.py
infra/: docker-compose.yml  otel-collector-config.yml  prometheus.yml
plugins/agent-obs/: plugin.json
scripts/: logql_query.py  promql_query.py
skills/setup/: SKILL.md
src/agent_obs/: __init__.py  artifacts.py  context.py  logql_query.py  metrics.py  promql_query.py  tracing.py
tests/: conftest.py  test_artifacts.py  test_context.py  test_init.py  test_logql_query.py  test_promql_query.py  test_sdk_integration.py  test_tracing.py
