[project]
name = "agent-obs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wooseong Chung", email = "dapi@krafton.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
